fix resolve reviewer issues — security, validation, coverage, and E2E tests